Replace completely unauditable testcafe library with playwright

--- a/tests/fixture.html
+++ b/tests/fixture.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="../dist/bdc.js"></script>
+    <script src="bdc.js"></script>
+    <script>
+      var { clobber, h } = bdc;
+      var $root = document.getElementById("root");
+    </script>
   </body>
 </html>
